--- a/templates.html
+++ b/templates.html
@@ -30,7 +30,43 @@
         <p><a href="templates/standard.html" class="button">Open demo</a></p>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup"></code>
+          <code class="language-markup">&lt;header&gt;
+  &lt;nav class="personal"&gt;
+    &lt;ul&gt;
+      &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;h1 class="logo"&gt;
+    &lt;a href="https://thefifthworld.com"&gt;
+      &lt;img src="/img/wordmark.black.svg" alt="The Fifth World" /&gt;
+    &lt;/a&gt;
+  &lt;/h1&gt;
+&lt;/header&gt;
+&lt;main&gt;
+  &lt;!-- Content goes here --&gt;
+&lt;/main&gt;
+&lt;footer&gt;
+  &lt;nav class="site"&gt;
+    &lt;ul&gt;
+      &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;section class="credits"&gt;
+    &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
+    &lt;p class="copyleft"&gt;
+      &lt;span class="icons"&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/cc.svg" alt="Creative Commons" /&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/by.svg" alt="Attribution" /&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/sa.svg" alt="Share-Alike" /&gt;
+      &lt;/span&gt;
+      &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
+    &lt;/p&gt;
+  &lt;/section&gt;
+&lt;/footer&gt;</code>
         </details>
       </section>
 
@@ -41,7 +77,50 @@
         <p><a href="templates/stack.html" class="button">Open demo</a></p>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup"></code>
+          <code class="language-markup">&lt;header class="home"&gt;
+  &lt;nav class="personal"&gt;
+    &lt;ul&gt;
+      &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;h1 class="logo"&gt;
+    &lt;a href="../index.html"&gt;
+      &lt;img src="/img/wordmark.white.svg" alt="The Fifth World" /&gt;
+    &lt;/a&gt;
+  &lt;/h1&gt;
+  &lt;p class="cta"&gt;&lt;a href="#" class="cta button"&gt;Watch the Trailer&lt;/a&gt;&lt;/p&gt;
+&lt;/header&gt;
+&lt;section class="stack"&gt;
+  &lt;!-- Content goes here --&gt;
+&lt;/section&gt;
+&lt;section class="stack highlight wormwood"&gt;
+  &lt;div&gt;
+    &lt;h1 class="novel" data-intro="Intro"&gt;Heading&lt;/h1&gt;
+    &lt;!-- Content goes here --&gt;
+  &lt;/div&gt;
+&lt;/section&gt;
+&lt;footer&gt;
+  &lt;nav class="site"&gt;
+    &lt;ul&gt;
+      &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
+      &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+  &lt;/nav&gt;
+  &lt;section class="credits"&gt;
+    &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
+    &lt;p class="copyleft"&gt;
+      &lt;span class="icons"&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/cc.svg" alt="Creative Commons" /&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/by.svg" alt="Attribution" /&gt;
+        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/sa.svg" alt="Share-Alike" /&gt;
+      &lt;/span&gt;
+      &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
+    &lt;/p&gt;
+  &lt;/section&gt;
+&lt;/footer&gt;</code>
         </details>
       </section>
 
