Documentation for templates

--- a/templates.html
+++ b/templates.html
@@ -30,43 +30,45 @@
         <p><a href="templates/standard.html" class="button">Open demo</a></p>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;header&gt;
-  &lt;nav class="personal"&gt;
-    &lt;ul&gt;
-      &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
-      &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/nav&gt;
-  &lt;h1 class="logo"&gt;
-    &lt;a href="https://thefifthworld.com"&gt;
-      &lt;img src="/img/wordmark.black.svg" alt="The Fifth World" /&gt;
-    &lt;/a&gt;
-  &lt;/h1&gt;
-&lt;/header&gt;
-&lt;main&gt;
-  &lt;!-- Content goes here --&gt;
-&lt;/main&gt;
-&lt;footer&gt;
-  &lt;nav class="site"&gt;
-    &lt;ul&gt;
-      &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/nav&gt;
-  &lt;section class="credits"&gt;
-    &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
-    &lt;p class="copyleft"&gt;
-      &lt;span class="icons"&gt;
-        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/cc.svg" alt="Creative Commons" /&gt;
-        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/by.svg" alt="Attribution" /&gt;
-        &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/sa.svg" alt="Share-Alike" /&gt;
-      &lt;/span&gt;
-      &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
-    &lt;/p&gt;
-  &lt;/section&gt;
-&lt;/footer&gt;</code>
+          <code class="language-markup">&lt;body class="thefifthworld"&gt;
+  &lt;header&gt;
+    &lt;nav class="personal"&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;h1 class="logo"&gt;
+      &lt;a href="https://thefifthworld.com"&gt;
+        &lt;img src="/img/wordmark.black.svg" alt="The Fifth World" /&gt;
+      &lt;/a&gt;
+    &lt;/h1&gt;
+  &lt;/header&gt;
+  &lt;main&gt;
+    &lt;!-- Content goes here --&gt;
+  &lt;/main&gt;
+  &lt;footer&gt;
+    &lt;nav class="site"&gt;
+      &lt;ul&gt;
+        &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;section class="credits"&gt;
+      &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
+      &lt;p class="copyleft"&gt;
+        &lt;span class="icons"&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/cc.svg" alt="Creative Commons" /&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/by.svg" alt="Attribution" /&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/sa.svg" alt="Share-Alike" /&gt;
+        &lt;/span&gt;
+        &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
+      &lt;/p&gt;
+    &lt;/section&gt;
+  &lt;/footer&gt;
+&lt;/body&gt;</code>
         </details>
       </section>
 
@@ -77,39 +79,97 @@
         <p><a href="templates/stack.html" class="button">Open demo</a></p>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;header class="home"&gt;
-  &lt;nav class="personal"&gt;
-    &lt;ul&gt;
-      &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
-      &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/nav&gt;
-  &lt;h1 class="logo"&gt;
-    &lt;a href="../index.html"&gt;
-      &lt;img src="/img/wordmark.white.svg" alt="The Fifth World" /&gt;
-    &lt;/a&gt;
-  &lt;/h1&gt;
-  &lt;p class="cta"&gt;&lt;a href="#" class="cta button"&gt;Watch the Trailer&lt;/a&gt;&lt;/p&gt;
-&lt;/header&gt;
-&lt;section class="stack"&gt;
-  &lt;!-- Content goes here --&gt;
-&lt;/section&gt;
-&lt;section class="stack highlight wormwood"&gt;
-  &lt;div&gt;
-    &lt;h1 class="novel" data-intro="Intro"&gt;Heading&lt;/h1&gt;
+          <code class="language-markup">&lt;body class="thefifthworld stack"&gt;
+  &lt;header class="home"&gt;
+    &lt;nav class="personal"&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;h1 class="logo"&gt;
+      &lt;a href="../index.html"&gt;
+        &lt;img src="/img/wordmark.white.svg" alt="The Fifth World" /&gt;
+      &lt;/a&gt;
+    &lt;/h1&gt;
+    &lt;p class="cta"&gt;&lt;a href="#" class="cta button"&gt;Watch the Trailer&lt;/a&gt;&lt;/p&gt;
+  &lt;/header&gt;
+  &lt;section class="stack"&gt;
     &lt;!-- Content goes here --&gt;
-  &lt;/div&gt;
-&lt;/section&gt;
-&lt;footer&gt;
-  &lt;nav class="site"&gt;
-    &lt;ul&gt;
-      &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
-      &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-  &lt;/nav&gt;
-  &lt;section class="credits"&gt;
+  &lt;/section&gt;
+  &lt;section class="stack highlight wormwood"&gt;
+    &lt;div&gt;
+      &lt;h1 class="novel" data-intro="Intro"&gt;Heading&lt;/h1&gt;
+      &lt;!-- Content goes here --&gt;
+    &lt;/div&gt;
+  &lt;/section&gt;
+  &lt;footer&gt;
+    &lt;nav class="site"&gt;
+      &lt;ul&gt;
+        &lt;li class="explore"&gt;&lt;a href="#"&gt;Explore&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="hear"&gt;&lt;a href="#"&gt;Hear&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="see"&gt;&lt;a href="#"&gt;See&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="play"&gt;&lt;a href="#"&gt;Play&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;section class="credits"&gt;
+      &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
+      &lt;p class="copyleft"&gt;
+        &lt;span class="icons"&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/cc.svg" alt="Creative Commons" /&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/by.svg" alt="Attribution" /&gt;
+          &lt;img src="https://s3.amazonaws.com/thefifthworld/website/images/sa.svg" alt="Share-Alike" /&gt;
+        &lt;/span&gt;
+        &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
+      &lt;/p&gt;
+    &lt;/section&gt;
+  &lt;/footer&gt;
+&lt;/body&gt;</code>
+        </details>
+      </section>
+
+      <!-- Stack -->
+      <section id="map">
+        <h2>Map</h2>
+        <p>We use the map template for the <strong>Explore</strong> page. It devotes the main body of the page to an interactive map.</p>
+        <p><a href="templates/map.html" class="button">Open demo</a></p>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;body class="thefifthworld map"&gt;
+  &lt;header&gt;
+    &lt;nav class="personal"&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;a href="standard-loggedin.html"&gt;Log in&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="#"&gt;How to Join&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;h1 class="logo"&gt;
+      &lt;a href="../index.html"&gt;
+        &lt;img src="/img/wordmark.black.svg" alt="The Fifth World" /&gt;
+      &lt;/a&gt;
+    &lt;/h1&gt;
+  &lt;/header&gt;
+  &lt;main class="leaflet-wrapper world"&gt;
+    &lt;div class="no-js"&gt;
+      &lt;p&gt;You&amp;rsquo;ll need JavaScript to use the interactive map, but something has gone wrong. If you&amp;rsquo;ve deliberately blocked JavaScript, you&amp;rsquo;ll need to enable it to use this feature. If not, something else may have gone wrong. Try reloading the page. Or start by browsing through these&amp;nbsp;pages:&lt;/p&gt;
+      &lt;ul class="continents"&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/eurasia"&gt;Eurasia&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/africa"&gt;Africa&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/north-america"&gt;North America&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/south-america"&gt;South America&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/antarctica"&gt;Antarctica&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/sahul"&gt;Sahul&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+      &lt;ul class="oceans"&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/pacific"&gt;Pacific Ocean&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/atlantic"&gt;Atlantic Ocean&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/arctic"&gt;Arctic Ocean&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/southern-ocean"&gt;Southern Ocean&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="https://thefifthworld.com/indian-ocean"&gt;Indian Ocean&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/div&gt;
+  &lt;/main&gt;
+  &lt;footer&gt;
     &lt;p&gt;&lt;em&gt;The Fifth World&lt;/em&gt; exists thanks to the generosity of our supporters, partners, and friends on Patreon. &lt;a href="https://www.patreon.com/thefifthworld"&gt;Would you like to join them and become part of our growing community?&lt;/a&gt;&lt;/p&gt;
     &lt;p class="copyleft"&gt;
       &lt;span class="icons"&gt;
@@ -119,8 +179,9 @@
       &lt;/span&gt;
       &lt;em&gt;The Fifth World&lt;/em&gt; is licensed under a &lt;a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
     &lt;/p&gt;
-  &lt;/section&gt;
-&lt;/footer&gt;</code>
+  &lt;/footer&gt;
+  &lt;script src="/js/bundle.js"&gt;&lt;/script&gt;
+&lt;/body&gt;</code>
         </details>
       </section>
 
