Add source file for headers, and mountains variation

--- a/templates.html
+++ b/templates.html
@@ -26,7 +26,7 @@
       <!-- Standard -->
       <section id="standard">
         <h2>Standard</h2>
-        <p>We use the standard template on most pages. It works well for those pages that focus on a single topic, like most wiki pages.</p>
+        <p>We use the standard template on most pages. It works well for those pages that focus on a single topic, like most wiki pages. By default, this page uses a forest background, but it can be changed to a mountain background by adding the class <code>mountains</code>. We intend to add more variations as we release more artwork.</code></p>
         <p><a href="templates/standard.html" class="button">Open demo</a></p>
         <details class="markup">
           <summary>Example markup</summary>
