--- a/components.html
+++ b/components.html
@@ -524,6 +524,9 @@
           <code class="language-markup">&lt;div class="leaflet-wrapper place" data-coords="40.441822,-80.012788"&gt;&lt;/div&gt;</code>
         </details>
         <section class="notes">
+          <ul>
+            <li>We use this map on locations &mdash; pages about a particular place. If JavaScript loads, then you see a map of the locale around the place. If JavaScipt fails for any reason, you don&rsquo;t even know you missed anything.</li>
+          </ul>
         </section>
       </section>
 
