--- a/components.html
+++ b/components.html
@@ -203,6 +203,30 @@
         </section>
       </section>
 
+      <!-- Blockquote -->
+      <section id="blockquote" data-category="HTML Tags" class="component">
+        <h2>Blockquote</h2>
+        <div class="preview">
+          <blockquote>
+            <p>The singular magic of a place is evident from what happens there, from what befalls oneself or others when in its vicinity. The songs proper to a specific site will share a common style, a rhythm that matches the pulse of the place, attuned to the way things happen there – to the sharpness of the shadows or the rippling speech of water bubbling up from the ground. In traditional Ireland, a country person might journey to one distant spring in order to cure her insomnia, to another for strengthening her ailing eyesight, and to yet another to receive insight and protection from thieves. For each spring has its own powers, its own blessings, and its own curses. Different gods dwell in different places, and different demons. Each place has its own dynamism, its own patterns of movement, and these patterns engage the senses and relate them in particular ways, instilling particular moods and modes of awareness, so that unlettered, oral people will rightly say that each place has its own mind, its own personality, its own intelligence.</p>
+            <cite>David Abram, <em>The Spell of the Sensuous: Perception and Language in a More-Than-Human World</em> (p. 182)</cite>
+          </blockquote>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;blockquote&gt;
+  &lt;p&gt;The singular magic of a place&hellip;&lt;/p&gt;
+  &lt;cite&gt;David Abram&hellip;&lt;/cite&gt;
+&lt;/blockquote&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use the <code>&lt;blockquote&gt;</code> tag to wrap a long quotation (one or several paragraphs).</li>
+            <li>If you don&rsquo;t mention the source of the quote in the text, use the <code>&lt;cite&gt;</code> tag, as in the example provided here.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Aside -->
       <section id="aside" data-category="HTML Tags" class="component">
         <h2>Aside</h2>
