--- a/components.html
+++ b/components.html
@@ -83,6 +83,77 @@
         </section>
       </section>
 
+      <!-- Lists -->
+      <section id="lists" data-category="HTML Tags" class="component">
+        <h2>Lists</h2>
+        <div class="preview">
+          <ul>
+            <li>Here we have an <em>unordered</em> list.</li>
+            <li>Unordered lists present related items, but not in any particular order.</li>
+            <li>
+              <p>List items can include paragraph tags.</p>
+              <p>They can even include multiple paragraph tags.</p>
+            </li>
+            <li>
+              <p>List items can also include other lists.</p>
+              <ul>
+                <li>An unordered list item</li>
+                <li>Another unordered list item</li>
+                <li>One more unordered list item</li>
+              </ul>
+            </li>
+            <li>With this list item, we&rsquo;ll ramble on for a little bit so that we have lots of text and so can see how the list item handles longer text when it will need to wrap that text, thusly.</li>
+          </ul>
+
+          <ol>
+            <li>Here we have an <em>ordered</em> list.</li>
+            <li>Unordered lists present items in a specified order.</li>
+            <li>
+              <p>List items can use paragraph tags and other lists.</p>
+              <ol>
+                <li>First ordered list item</li>
+                <li>Second ordered list item</li>
+                <li>
+                  <p>Third ordered list item</p>
+                  <ol>
+                    <li>
+                      <p>We can go three layers deep with distinct ordering systems.</p>
+                      <ol>
+                        <li>Four, actually.</li>
+                      </ol>
+                    </li>
+                  </ol>
+                </li>
+              </ol>
+            </li>
+            <li>With this list item, we&rsquo;ll ramble on for a little bit so that we have lots of text and so can see how the list item handles longer text when it will need to wrap that text, thusly.</li>
+          </ol>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;!-- Unordered list --&gt;
+&lt;ul&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+&lt;/ul&gt;
+
+&lt;!-- Ordered list --&gt;
+&lt;ol&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+  &lt;li&gt;List item&lt;/li&gt;
+&lt;/ol&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use lists when you need to present a list of items.</li>
+            <li>Use an ordered list when the order of the items has meaning.</li>
+            <li>Use an unordered list when the order of the items does not have any meaning.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Horizontal rule -->
       <section id="hr" data-category="HTML Tags" class="component">
         <h2>Horizontal rule</h2>
