--- a/components.html
+++ b/components.html
@@ -171,6 +171,24 @@
         </section>
       </section>
 
+      <!-- Image -->
+      <section id="img" data-category="HTML Tags" class="component">
+        <h2>Image</h2>
+        <div class="preview">
+          <img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;img src="/img/forest.png" alt="The Suburban Forest, by Nick Pedersen" /&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li><em>Every image must have an <code>alt</code> tag!</em> The <code>alt</code> attribute should meaningfully describe the image shown.</li>
+            <li>If you have a hard time coming up with appropriate content for this, that might offer you a hint that you shouldn&rsquo;t use the image. Images that we have a hard time describing usually offer decoration and little else. That means they&rsquo;ll require extra overheard for users without offering anything substantive in return. As we once heard from Edward Tufte, &ldquo;however nice your interface is, it would be better if there were less of it.&rdquo; We find a beauty in simplicity and usability. Have confidence in your design&rsquo;s ability to stand up without such decoration.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Basic table -->
       <section id="table" data-category="HTML Tags" class="component">
         <h2>Table</h2>
