--- a/components.html
+++ b/components.html
@@ -189,6 +189,30 @@
         </section>
       </section>
 
+      <!-- Figure -->
+      <section id="figure" data-category="HTML Tags" class="component">
+        <h2>Figure</h2>
+        <div class="preview">
+          <figure>
+            <img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" />
+            <figcaption class="numbered">&ldquo;The Suburban Forest&rdquo; by <a href="https://nick-pedersen.com/">Nick Pedersen</a></figcaption>
+          </figure>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;figure&gt;
+  &lt;img src="/img/forest.jpg" alt="The Suburban Forest, by Nick Pedersen" /&gt;
+  &lt;figcaption class="numbered"&gt;&amp;ldquo;The Suburban Forest&amp;rdquo; by &lt;a href="https://nick-pedersen.com/"&gt;Nick Pedersen&lt;/a&gt;&lt;/figcaption&gt;
+&lt;/figure&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use a figure to present an image or other such embedded media along with a caption.</li>
+            <li>If you add the <code>numbered</code> class to the <code>&lt;figcaption&gt;</code> tag (as in the example above) then a JavaScript enhancement will add <strong>Figure X</strong> to each such caption, numbering all such figures in the order they appear on the page.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Basic table -->
       <section id="table" data-category="HTML Tags" class="component">
         <h2>Table</h2>
