--- a/components.html
+++ b/components.html
@@ -650,6 +650,27 @@
         </section>
       </section>
 
+      <!-- Video -->
+      <section id="video" data-category="Content" class="component">
+        <h2>Video</h2>
+        <div class="preview">
+          <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/j0ke7eOhTJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;div class="video-wrapper"&gt;
+  &lt;!-- Insert the embed code for your &lt;iframe&gt; from a service like YouTube or Vimeo here. --&gt;
+&lt;/div&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this component to embed videos from YouTube, Vimeo, or other such video hosting services on a page.</li>
+          </ul>
+        </section>
+      </section>
+
       <!-- Place map -->
       <section id="place-map" data-category="Content" class="component">
         <h2>Place map</h2>
