--- a/components.html
+++ b/components.html
@@ -739,6 +739,30 @@
         </section>
       </section>
 
+      <!-- File upload -->
+      <section id="file-upload" data-category="Interactive content" class="component">
+        <h2>File upload</h2>
+        <div class="preview">
+          <label for="file">File</label>
+          <input type="file" name="file" id="file" />
+          <input type="checkbox" id="file-img" />
+          <label for="file-img">I&rsquo;ve uploaded an image.</label>
+        </div>
+        <details class="markup">
+          <summary>Example markup</summary>
+          <code class="language-markup">&lt;label for="file"&gt;File&lt;/label&gt;
+&lt;input type="file" name="file" id="file" /&gt;
+&lt;input type="checkbox" id="file-img" /&gt;
+&lt;label for="file-img"&gt;I&rsquo;ve uploaded an image.&lt;/label&gt;</code>
+        </details>
+        <section class="notes">
+          <ul>
+            <li>Use this component to upload a file.</li>
+            <li>As a JavaScript enhancement, this component adds drag-and-drop functionality, as well as the option to create a thumbnail for your image.</li>
+          </ul>
+        </section>
+      </section>
+
     </main>
     <script src="js/bundle.js"></script>
     <script src="js/prism.js"></script>
