--- a/components.html
+++ b/components.html
@@ -743,22 +743,27 @@
       <section id="file-upload" data-category="Interactive content" class="component">
         <h2>File upload</h2>
         <div class="preview">
-          <label for="file">File</label>
-          <input type="file" name="file" id="file" />
-          <input type="checkbox" id="file-img" />
-          <label for="file-img">I&rsquo;ve uploaded an image.</label>
+          <form action="#file-upload" method="GET">
+            <input type="text" name="other" />
+            <label for="file">File</label>
+            <input type="file" name="file" id="file" />
+            <input type="checkbox" id="file-img" />
+            <label for="file-img">I&rsquo;ve uploaded an image.</label>
+          </form>
         </div>
         <details class="markup">
           <summary>Example markup</summary>
-          <code class="language-markup">&lt;label for="file"&gt;File&lt;/label&gt;
-&lt;input type="file" name="file" id="file" /&gt;
-&lt;input type="checkbox" id="file-img" /&gt;
-&lt;label for="file-img"&gt;I&rsquo;ve uploaded an image.&lt;/label&gt;</code>
+          <code class="language-markup">&lt;form action="/your/form/endpoint" method="POST"&gt;
+  &lt;label for="file"&gt;File&lt;/label&gt;
+  &lt;input type="file" name="file" id="file" /&gt;
+  &lt;input type="checkbox" id="file-img" /&gt;
+  &lt;label for="file-img"&gt;I&rsquo;ve uploaded an image.&lt;/label&gt;
+&lt;/form&gt;</code>
         </details>
         <section class="notes">
           <ul>
             <li>Use this component to upload a file.</li>
-            <li>As a JavaScript enhancement, this component adds drag-and-drop functionality, as well as the option to create a thumbnail for your image. As this relies on a JavaScript enhancement, make sure that the server-side script that receives the form can handle either receiving a thumbnail from the form, or generating a thumbnail if it doesn&rsquo;t. The <em>&ldquo;I&rsquo;ve uploaded an image&rdquo;</em> input should provide an additional bit of input when determining whether or not you need to generate a thumbnail.</li>
+            <li>As a JavaScript enhancement, this component adds drag-and-drop functionality, as well as the option to create a thumbnail for your image. You must include this component inside of a form with an <code>action</code> attribute. As this relies on a JavaScript enhancement, make sure that the server-side script that receives the form can handle either receiving a thumbnail from the form, or generating a thumbnail if it doesn&rsquo;t. The <em>&ldquo;I&rsquo;ve uploaded an image&rdquo;</em> input should provide an additional bit of input when determining whether or not you need to generate a thumbnail.</li>
           </ul>
         </section>
       </section>
