Stop normal form submission
We're going to have to handle this ourselves.

--- a/components.html
+++ b/components.html
@@ -749,6 +749,9 @@
             <input type="file" name="file" id="file" />
             <input type="checkbox" id="file-img" />
             <label for="file-img">I&rsquo;ve uploaded an image.</label>
+            <p class="buttons">
+              <button>Submit</button>
+            </p>
           </form>
         </div>
         <details class="markup">
