Add form attributes that any real uploader would need

--- a/components.html
+++ b/components.html
@@ -579,7 +579,7 @@
       <section id="file-upload" data-category="Form elements" class="component">
         <h2>File upload</h2>
         <div class="preview">
-          <form action="#file-upload" method="GET">
+          <form method="POST" action="#file-upload" enctype="multipart/form-data">
             <input type="text" name="other" />
             <select name="select">
               <option>1</option>
